# CppArgumentsReader

./: CMakeLists.txt  LICENSE.md
.github/workflows/: build.yml
CppArgumentsReader/: ArgumentsReader.cppm  ArgumentsReaderExceptions.cppm  CMakeLists.txt  CppArgumentsReader.cppm
examples/example_1/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_1.cpp
